# project-all-access-livable-housing

./: .gitignore  README.md  __main__.py  census_acs_join.csv  census_join.py  clean_311.py  crawler.py  evictions_api.py  filter_zori.py  impute_zori.py  index.py  main.py  process_zori.py  progress.md  pyproject.toml  requirements.txt  visualize.py  waitlist_API.py  zori_filter.py
clean-data/: 311_tracts_issues.csv  api_evictions_data.csv  census_acs_join.csv  clean_crosswalks.csv  clean_encampments_data.csv  clean_zillow_data.csv  consolidated_data.csv  crosswalks.csv  encampment_tracts.csv  evictions_api_data.csv  evictions_api_data_tracts.csv  joined_encampment_tracts.csv  joined_evictions_tracts.csv  merged_data.csv  processed_zori.csv  tidy_zori.csv  zori_filter.csv
clean-data/crosswalks-csv/: ZIP_TRACT_032020.csv  ZIP_TRACT_032021.csv  ZIP_TRACT_032022.csv  ZIP_TRACT_032023.csv  ZIP_TRACT_032024.csv  (+15 more)
clean_data/: zori_filter.csv
milestones/: final.md  milestone1.md  milestone2.md  milestone3.md  progress.md
raw-data/: raw_encampments_data.xlsx
scratch/: get_shelter_data.py
src/: __main__.py  altair.ipynb  analyze_data.py  clean_311.py  dashboard.py  datatypes.py  encampments_311.py  evictions_analysis.py  get_api_data.py  get_data.py  process_data.py  process_zori.py  quadtree.py  regression_analysis.py  requirements.txt  run_regression.py  spatial_join.py  visualize.py
tests/: test_analyze_data.py  test_data.py  test_get_api_data.py  test_get_data.py  test_process_data.py  test_spatial_join.py
unused-files/: scrape_map.py  waitlist_API.py
(+10 files in other folders)
