[project]
name = "project-all-access-livable-housing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.10.0",
    "httpx>=0.28.1",
    "pandas>=3.0.0",
    "ruff>=0.15.0",
    "sodapy>=2.2.0",
    "lxml>=6.0.2",
    "shapely>=2.1.2",
    "pyshp>=3.0.3",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "folium>=0.20.0",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.5",
    "jellyfish>=1.2.1",
    "altair>=6.0.0",
    "dash>=4.0.0",
    "dash-ag-grid>=33.3.3",
    "plotly-express>=0.4.1",
    "altair-viewer>=0.4.0",
    "altair-saver>=0.5.0",
]
